--- a/style.css
+++ b/style.css
@@ -257,7 +257,56 @@
     background-color: rgb(255, 0, 0);
 }
 
-
+.result{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.resultDial{
+    /* border: 1px red solid; */
+    margin-top: 6vw;
+    width: 30vw;
+    height: 30vw;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.resultDial .div1{
+    height: 100%;
+    width: 100%;
+    background-color: rgb(255, 0, 0);
+    border-radius: 50%;
+    position: absolute;
+    overflow: hidden;
+    transform: rotate(0deg);
+    transition: transform 1s ease-in-out;
+}
+.resultDial .div11{
+    width: 100%;
+    height: 50%;
+    background-color: antiquewhite;
+}
+.resultDial .div2{
+    position: absolute;
+    width: 50%;
+    height: 50%;
+    background-color: aquamarine;
+    border-radius: 50%;
+}
+.resultDial .div3{
+    position: absolute;
+    width: 100%;
+    height: 50%;
+    margin-top: 50%;
+    background-color: aquamarine;
+}
+.resultDial img{
+    position: absolute;
+    height: 50%;
+    transform: rotate(-90deg);
+    transition: all 1s ease-in-out;
+}
 
 @media screen and (max-width:500px) {
     .main{
@@ -322,13 +371,24 @@
     }
     .height .heightDisplay{
         /* border: 1px red solid; */
-        margin-top: 2vw;
+        margin-top: 8vw;
         height: 50vw;
     }
     .heightDisplay img{
         width: 49%;
         margin-left: 20%;
         margin-top: 10%;
+    }
+    .height .header{
+        margin-top: 3vw;
+        margin-left: 1vw;
+        margin-right: 1vw;
+    }
+    .resultDial{
+        /* border: 1px red solid; */
+        margin-top: 3vw;
+        width: 70vw;
+        height: 70vw;
     }
 }
 
