--- a/style.css
+++ b/style.css
@@ -261,6 +261,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
 }
 .resultDial{
     /* border: 1px red solid; */
@@ -306,6 +307,34 @@
     height: 50%;
     transform: rotate(-90deg);
     transition: all 1s ease-in-out;
+}
+.result .resultDisplay{
+    position: absolute;
+    width: 80%;
+    height: 40%;
+    /* border: red solid 1px; */
+    top: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    /* gap: 1vw; */
+}
+.result .dis1{
+    color: red;
+    font-size: 2vw;
+}
+.result .dis2{
+    color: red;
+    padding: 0.5vw 1vw;
+    font-size: 3vw;
+}
+.result .dis3{
+    font-size: 2vw;
+    color: red;
+}
+.result .dis4{
+    font-size: 1.3vw;
 }
 
 @media screen and (max-width:500px) {
@@ -389,6 +418,22 @@
         margin-top: 3vw;
         width: 70vw;
         height: 70vw;
+    }
+    .result .dis1{
+        color:orange;
+        font-size: 4vw;
+    }
+    .result .dis2{
+        color: red;
+        padding: 0.5vw 1vw;
+        font-size: 6vw;
+    }
+    .result .dis3{
+        font-size: 4vw;
+        color: red;
+    }
+    .result .dis4{
+        font-size: 2vw;
     }
 }
 
